init: R01-0000 - reedACT project initialization with complete process management
Comprehensive project setup establishing:

FRAMEWORK FOUNDATION:
- reedACT template engine with Tera extensions
- RTR pattern (Request→Template→Response) replacing MVC
- Rust/Axum foundation with security-first design
- Polyglot execution architecture (PHP, Python, JS)

PROCESS MANAGEMENT:
- Ticket system with 8 categories (R01-R08)
- Phase-based workflow (P→C→D→T) with mandatory commits
- Central tracking via board.csv with dependencies
- Decision logging in docs/decisions/decisions.csv

DOCUMENTATION:
- Complete development workflow (PROCESS_GUIDE.md)
- Style consistency guide (STYLE_GUIDE.md)
- Contribution guidelines (CONTRIBUTING.md)
- Security documentation (SECURITY.md)
- Ticket system documentation (TICKET_SYSTEM.md)

QUALITY GATES:
- Pre-commit checks enforcing standards
- Phase transition validation
- Decision logging requirements
- Pattern consistency enforcement

DECISIONS INCLUDED:
- DEC001: Axum over Actix (Tower ecosystem)
- DEC002: Tera template engine (Django-like)
- DEC003: Security jail architecture
- DEC004: Public folder naming convention
- DEC005: Server-side only templates
- DEC006: SSG for static content
- DEC007: Phase-based ticket workflow

This foundation enables systematic, traceable development with
clear processes for session handoffs and quality assurance.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@ Cargo.lock
 .DS_Store
 Thumbs.db
 
-# Project specific
+# Project specific (internal docs)
 CLAUDE.md
+docs/RESPONSIBILITIES.md
 /tmp/
 /dist/
 *.log
@@ -25,7 +26,8 @@ CLAUDE.md
 .env.local
 
 # Generated files
-/static/generated/
+/public/generated/
+/public/dist/
 
 # Development
 /dev-data/
